# Cvicenie01

./: CMakeLists.txt
Cvicenie10/: CMakeLists.txt  Cvicenie10.cpp  Cvicenie10.h
